--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "formeo",
-  "version": "1.6.2",
+  "version": "1.6.2-mb-01",
   "main": "dist/formeo.min.js",
   "files": [
     "dist/*",
@@ -77,6 +77,9 @@
     "build": "npm-run-all -p build:icons build:formeo",
     "build:formeo": "cross-env NODE_ENV=production webpack --mode production -p --progress --config tools/webpack.config",
     "build:icons": "babel-node ./tools/generate-sprite",
+    "build-dev": "npm-run-all -p build-dev:icons build-dev:formeo",
+    "build-dev:formeo": "cross-env NODE_ENV=development webpack --mode development -p --watch --progress --config tools/webpack.dev.config",
+    "build-dev:icons": "babel-node ./tools/generate-sprite",
     "lint": "eslint ./src --ext .js || true",
     "test": "jest src/",
     "test:ci": "yarn test --coverage",
